--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
 			<div class="col-md-12">
 				<p>Today is...</p>
 				<p>as beautiful as other days</p>
-				<p>but today is very special day</p>
+				<p>but today is a very special day</p>
 				<p>another year has gone</p>
 				<p>in a blink of the eyes</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
+				<p>Let's make this year's </p>
+				<p>celebration the best ever</p>
 				<p>May all your wishes come true</p>
 				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>lots of happiness along the way</p>
-				<p>enjoy every single moment...</p>
-				<p>fill it with your most beautiful smile</p>
+				<p>you'll enjoy every single moment </p>
+				<p> and find lots of happiness along the way</p>
+				<p>Fill this day with your most beautiful smile</p>
 				<p>and make it the best memory..</p>
 				<p>a very happy birthday Dear Kanika & Dear Aishee</p>
+				<p> -Rajesh </p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
