--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <head>
 	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Kanika & Aishee">
+	<meta name="description" content="Happy Birthday Aishee & Aadhya">
 	<meta name="robots" content="index, follow" />
-	//<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
+	
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
@@ -45,22 +45,22 @@
     	<h2 style="color:#D14D39;">D</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">K</h2>
+    	<h2 style="color:#8FAD00;">A</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">A</h2>
+    	<h2 style="color:#8377E4;">I</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">N</h2>
+    	<h2 style="color:#99C96A;">S</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">I</h2>
+    	<h2 style="color:#20CFB4;">H</h2>
     </div>
 <div class="balloons text-center" id="b8">
-    	<h2 style="color:#F2B300;">K</h2>
+    	<h2 style="color:#F2B300;">E</h2>
     </div>
     <div class="balloons text-center" id="b9">
-    	<h2 style="color:#0719D4;">A</h2>
+    	<h2 style="color:#0719D4;">E</h2>
     </div>
 	<div class="balloons text-center" id="b10">
     	<h2 style="color:#D14D39;">&</h2>
@@ -69,19 +69,19 @@
     	<h2 style="color:#8FAD00;">A</h2>
     </div>
 	<div class="balloons text-center" id="b13">
-    	<h2 style="color:#8377E4;">I</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b14">
-    	<h2 style="color:#99C96A;">S</h2>
+    	<h2 style="color:#99C96A;">D</h2>
     </div>
     <div class="balloons text-center" id="b15">
     	<h2 style="color:#20CFB4;">H</h2>
     </div>
 <div class="balloons text-center" id="b16">
-    	<h2 style="color:#F2B300;">E</h2>
+    	<h2 style="color:#F2B300;">Y</h2>
     </div>
     <div class="balloons text-center" id="b17">
-    	<h2 style="color:#0719D4;">E</h2>
+    	<h2 style="color:#0719D4;">A</h2>
     </div>
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
@@ -130,21 +130,11 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but today is a very special day</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p>Let's make this year's </p>
-				<p>celebration the best ever</p>
 				<p>May all your wishes come true</p>
-				<p>and I hope</p>
-				<p>you'll enjoy every single moment </p>
+				<p>and you enjoy every single moment </p>
 				<p> and find lots of happiness along the way</p>
-				<p>Fill this day with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>a very happy birthday Dear Kanika & Dear Aishee</p>
-				<p> -Rajesh </p>
+				<p>a very happy birthday Dear Aishee & Dear Aadhya</p>
+				
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
