--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
     	<h2 style="color:#0719D4;">E</h2>
     </div>
 	<div class="balloons text-center" id="b10">
-    	<h2 style="color:#D14D39;">&</h2>
+    	<h2 style="color:#D14D39;">A</h2>
     </div>
 	<div class="balloons text-center" id="b12">
     	<h2 style="color:#8FAD00;">A</h2>
     </div>
 	<div class="balloons text-center" id="b13">
-    	<h2 style="color:#8377E4;">A</h2>
+    	<h2 style="color:#8377E4;">D</h2>
     </div>
     <div class="balloons text-center" id="b14">
-    	<h2 style="color:#99C96A;">D</h2>
+    	<h2 style="color:#99C96A;">H</h2>
     </div>
     <div class="balloons text-center" id="b15">
-    	<h2 style="color:#20CFB4;">H</h2>
+    	<h2 style="color:#20CFB4;">Y</h2>
     </div>
 <div class="balloons text-center" id="b16">
-    	<h2 style="color:#F2B300;">Y</h2>
+    	<h2 style="color:#F2B300;">A</h2>
     </div>
     <div class="balloons text-center" id="b17">
     	<h2 style="color:#0719D4;">A</h2>
